<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinePlot</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world</string>
    <string name="openfile">Open file</string>
    <string name="graphvariables">Graph variables</string>
    <string name="graphsettings">Graph settings</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="sessionSettings">Session settings</string>
    <string name="graphVariables">Graph variables</string>
    <string name="graphSettings">Graph settings</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="filepath">File path:</string>
    <string name="done">Done</string>
    <string name="firstrowlabels">Labels in first row</string>
    <string name="separator">Series separator:</string>
    <string name="Variable">Variable settings for:</string>
    <string name="varShowTitle">Line visibility</string>
    <string name="varShowSummary">Visibility is </string>
    <string name="varShowPointsTitle">Points visibility</string>
    <string name="varShowPointsSummary">Visibility is </string>
    <string name="varSelTitle">Variable selection</string>
    <string name="varSelSummary">Settings for serie:</string>
    <string name="lineWidthTitle">Width</string>
    <string name="lineWidthSummary">Width is </string>
    <string name="selColorTitle">Color</string>
    <string name="selColorSummary">Color is </string>
    <string name="lineStyleTitle">Line style</string>
    <string name="lineStyleSummary">Line style is</string>
    <string name="varDialogTitle">Variable selection</string>
    <string name="lineStyleDialogTitle">Curve width selection</string>
    <string name="varWidthDialogTitle">Curve width selection</string>
    <string name="varColorDialogTitle">Color selection</string>
    <string name="recalcCurves">Recalculate curves</string>

    <string name="AxisPrefs">Axis scales</string>
    <string name="MinTitle">Min</string>
    <string name="MaxTitle">Max</string>
    <string name="GridPrefs">Grid preferences</string>

    <string name="xGridPrefs">X Grid preferences</string>

    <string name="xAxisPrefs">X axis scales</string>
    <string name="xMinTitle">X min</string>
    <string name="xMaxTitle">X max</string>
    <string name="y0AxisPrefs">Y1 axis scales</string>
    <string name="y0MinTitle">Y1 min</string>
    <string name="y0MaxTitle">Y1 max</string>
    <string name="y1AxisPrefs">Y2 axis scales</string>
    <string name="y1MinTitle">Y2 min</string>
    <string name="y1MaxTitle">Y2 max</string>
    <string name="axisMinSummary">Minimum is:</string>
    <string name="axisMaxSummary">Maximum is:</string>
    <string name="axisManualScaleTitle">Range</string>
    <string name="axisManualScaleSummary">Manual scale setting is </string>
    <string name="yAxisAlignZeroTitle">Align origins</string>
    <string name="yAxisAlignZeroSummary">Align the axis origin on the origin of the left axis</string>
    <string name="resetScales">Reset auto scales</string>
    <string name="restoreScales">Restore scale settings</string>
    <string name="graphFontSettings">Font settings</string>
    <string name="fontSizeDialog">Font Size</string>
    <string name="graphFontSizeTitle">Graph Font Size</string>
    <string name="ignorefirstlinesTitle">Ignore first lines</string>
    <string name="ignorefirstlinesSummary">Lines to be ignored</string>
    <string name="graphFontSizeSummary">The graph font size is</string>
    <string name="graphLeftMarginTitle">Left margin</string>
    <string name="graphRightMarginTitle">Right margin</string>
    <string name="graphTopMarginTitle">Top margin</string>
    <string name="graphBotMarginTitle">Bottom margin</string>
    <string name="graphMarginSummary">The margin is</string>
    <string name="fontTypeDialog">Font typeface picker</string>
    <string name="fontTypeTitle">Font typeface</string>
    <string name="fontTypeSummary">Font typeface is</string>
    <string name="fontStyleDialog">Font Style picker</string>
    <string name="fontStyleTitle">Font Style</string>
    <string name="fontStyleSummary">Font Style is</string>
    <string name="y0GridPrefs">Axis 1 grid</string>
    <string name="y1GridPrefs">Axis 2 grid</string>
    <string name="hardwareAcceleration">Hardware Acceleration</string>
    <string name="hdwAccTitle">Hardware Acceleration</string>
    <string name="hdwAccSummary">Hardware Acceleration is disabled</string>
    <string name="axisSelection">"y axis selection:"</string>
    <string name="xSelPrefTitle">"x axis variable"</string>
    <string name="xSelPrefSummary">"x axis variable is:"</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Done</string>
    <string name="file_name">File name:</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="err">Error</string>
    <string name="android">AndroidString</string>
    <string name="fileLoad">Load file</string>
    <string name="listSeparatorTitle">List separator</string>
    <string name="listSeparatorSummary">List separator is:</string>
    <string name="decimalSeparatorTitle">Decimal separator</string>
    <string name="decimalSeparatorSummary">Decimal separator is:</string>
    <string name="dataColumnsTitle">Data order</string>
    <string name="dataColumnsSummary">Data is in columns</string>
    <string name="x1stColumnTitle">x-values</string>
    <string name="x1stColumnSummary">x-values are in the 1st column</string>
    <string name="labels1stRowTitle">Labels</string>
    <string name="labels1stRowSummary">Labels are in the first row</string>

</resources>
